<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UserDetailActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardBackgroundColor="@color/card_bg2"
        app:cardCornerRadius="20dp"
        android:padding="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:src="@drawable/ic_baseline_person_24"
                app:civ_border_color="@color/white"
                app:civ_border_width="1dp"/>
            <TextView
                android:id="@+id/nameET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dem_nm"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"/>

            <TextView
                android:id="@+id/accNoET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/acc_no"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"/>

            <TextView
                android:id="@+id/emailET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_dm"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"/>

            <TextView
                android:id="@+id/phET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mob_dm"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"/>

            <TextView
                android:id="@+id/balET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_balance_200769"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:gravity="center"
                android:textStyle="bold"
                android:padding="5dp"
                android:background="@drawable/bal_bg"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/transferBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/transfer_money"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textColor="@color/white"
        app:backgroundTint="@color/card_bg2"/>

</LinearLayout>