<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/cardViewUser"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    app:cardBackgroundColor="@color/card_bg2"
    app:cardCornerRadius="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="1dp"
        android:gravity="center">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circularImageView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_baseline_person_24"
            android:layout_margin="3dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_margin="3dp">
            <TextView
                android:id="@+id/textViewName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dem_nm"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_margin="2dp"/>
            <TextView
                android:id="@+id/textViewAccNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/acc_no"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:layout_margin="2dp"/>
            <TextView
                android:id="@+id/textViewAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amount_20340_rs"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:layout_margin="2dp"/>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>